[metadata]
name = phylojunction
version = 0.0.1
description = A python environment for protopying, simulating, and learning with evolutionary models
long_description = file: README.rst
author = Fabio K. Mendes
author_email = f.mendes@wustl.edu
url = https://github.com/fkmendes/PhyloJunction
license = GPL-3.0 

# we need the src references because we use a src/ file structure
[options]
zip_safe = False
install_requires =
    numpy>=1.22.0
    matplotlib>=3.5.1
    PySimpleGUI>=4.57.0
    pandas>=1.4.2
    dendropy>=4.5.2
    scipy>=1.8.1
    pyperclip>=1.8.2
    tabulate>=0.8.10
    PySide6>=6.3.2
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pjcli = phylojunction.interface.pjcli.pj_cli:call_cli
gui_scripts = 
    pjgui = phylojunction.interface.pysidegui.pj_gui:call_gui